# WordErrorRate.py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  wer.py
worderrorrate/: __init__.py  version.py
