[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worderrorrate"
version = "0.1.2"
authors = [
  { name="David A. van Leeuwen", email="david.vanleeuwen@gmail.com" },
]
description = "Alignment and word error rate calculations"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "numpy" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davidavdav/WordErrorRate.py"
"Bug Tracker" = "https://github.com/davidavdav/WordErrorRate.py/issues"
